<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/build"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/create_player"
                android:textColor="#fff"
                android:textSize="30sp" />


        </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/round2"
            android:gravity="right|center"
            android:inputType="textPersonName"
            android:paddingBottom="11dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/round2"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:padding="10dp">

            <Spinner
                android:id="@+id/governorates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </LinearLayout>

        <EditText
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/round2"
            android:gravity="right|center"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/round2"
            android:gravity="right|center"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="10dp" />

        <EditText
            android:id="@+id/phone2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/round2"
            android:gravity="right|center"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/round2"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:padding="10dp">

            <Spinner
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round2"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/available_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/avavilable_days"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/saturday"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/sunday"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/monday"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/tuesday"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/wednesday"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/thursday"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/friday"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/all_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="@string/all_week"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round2"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:padding="10dp">

            <RadioGroup
                android:id="@+id/radio_visual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@+id/completed_team"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/visual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/visual" />

                <RadioButton
                    android:id="@+id/invisual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/unvisual" />


            </RadioGroup>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/discription" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center">

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/round2"
                android:paddingBottom="1dp"
                android:text="@string/save"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/round2"
                android:paddingBottom="1dp"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

    <com.startapp.android.publish.ads.banner.Banner
        android:id="@+id/startAppBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal" />

</android.support.design.widget.CoordinatorLayout>